# multi-hoggorm

./: .gitignore  README.md  README.rst  setup.cfg
SimulatedData/: B--A.py  D--A-B-C.py  ExplainedVariancesTable_simulatedData.xlsx  SimDataPath.xlsx  cross_val.py  pca.py  sopls.py  statTools.py
docs/source/: conf.py  index.rst
resources/: PCA.py  PCR.py  SOPLS.py
resources/data/: E.txt
src/legacy/SimulatedData/: A.xlsx  B.xlsx  C--A-B.py  C--B_special.py  C.xlsx  D.xlsx  Model.pptx  plsr.py
src/legacy/resources/: PLSR.py  test.py
src/legacy/resources/data/: A.txt  B.txt  C.txt  D.txt  F.txt  G.txt
