[metadata]
name = multihoggorm
version = 0.0.1
license = MIT
description = Multiblock data analysis methods
long_description = file: README.md
author = Fabian Jetzinger
author_email = jetzinger.fabian@gmail.com
url=https://github.com/NMBU-Data-Science/multi-hoggorm
classifiers=
	Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.7
	Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =


[options.packages.find]
where=src